Added notes on compilation step

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter2:building blocks of neural nets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZaKoJ+kHvm4z5dW1/o79B",
+      "authorship_tag": "ABX9TyO7A7QMHG33uAgZGDRorfLV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -304,6 +304,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "VtVzp-YkGD97",
+        "colab_type": "text"
+      },
+      "source": [
+        "*compilation step*\n",
+        "\n",
+        "* A loss function how we measure our performance on the training data\n",
+        "* An optimizer the mechanism in which, the network will update based on the data and loss function\n",
+        "* Metrics to monitor during testing and training in this case accuracy\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "6J0Uyra69waq",
         "colab_type": "text"
       },
@@ -422,6 +436,66 @@
             "tags": []
           },
           "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rpcy-ArIFEyo",
+        "colab_type": "text"
+      },
+      "source": [
+        "The quantities displayed above are the loss and accuracy of the training. \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "okKpzjNVFXaC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "65db5a54-ac56-49dd-a1ae-fd3baf71ee56"
+      },
+      "source": [
+        "test_loss, test_acc = net.evaluate(test_images, test_labels)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10000/10000 [==============================] - 1s 57us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oMOMjBuSFqSF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ba536579-0ae2-47cc-b739-53e92ba529c3"
+      },
+      "source": [
+        "print(\"test_acc:\", test_acc)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test_acc: 0.9136999845504761\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
