--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -6,7 +6,8 @@
       "name": "Chapter2:building blocks of neural nets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7A7QMHG33uAgZGDRorfLV",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPZg5MfaHZxOJ2eRQL97Vlf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +51,7 @@
         "from keras.datasets import mnist\n",
         "(train_images, train_lables), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +87,7 @@
       "source": [
         "train_images.shape\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +117,7 @@
       "source": [
         "len(train_lables)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +147,7 @@
       "source": [
         "train_lables"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +187,7 @@
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +217,7 @@
       "source": [
         "len(test_labels)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +247,7 @@
       "source": [
         "test_labels"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +284,7 @@
         "from keras import models\n",
         "from keras import layers\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +299,7 @@
         "net.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
         "net.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +338,7 @@
         "            loss='categorical_crossentropy',\n",
         "            metrics=['accuracy'])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +365,7 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype('float32') / 255"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +391,7 @@
         "train_lables = to_categorical(train_lables)\n",
         "test_labels = to_categorical(test_labels)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,14 +401,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 235
         },
         "outputId": "15bf4cf1-15b5-49e5-db92-720abcd4358f"
       },
       "source": [
         "net.fit(train_images, train_lables, epochs=5, batch_size=128)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,7 +464,7 @@
       "source": [
         "test_loss, test_acc = net.evaluate(test_images, test_labels)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +489,7 @@
       "source": [
         "print(\"test_acc:\", test_acc)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,6 +499,161 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OdGdlv9hPGI5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2 Data representations for neural networks"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YB-8ltxoPUVC",
+        "colab_type": "text"
+      },
+      "source": [
+        "The data in the previous example was stored in a multidimensional Numpy array or *tensors*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N9PSIUmnPrLq",
+        "colab_type": "text"
+      },
+      "source": [
+        "A simple explanation of a tensor is a container for data--primarily numeric data. In the context of tensors a *dimension* is often called an *axis*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZcmeMVKMQ4-p",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2.2.1 Scalars (0D tensors)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jst8IE1dRqP0",
+        "colab_type": "text"
+      },
+      "source": [
+        "A 0D tensor containing a only one number is called a *scalar*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Z7Aaml4UGHF",
+        "colab_type": "text"
+      },
+      "source": [
+        "In Numpy, a float32 or float64 number is a scalar tensor. The number of axes of a tensor is called it's *rank*."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6v-Vqb2STp_d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "89f66ad9-3d6a-48c2-e0e4-95c571e312fe"
+      },
+      "source": [
+        "import numpy as np\n",
+        "x = np.array(12)\n",
+        "x"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(12)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_rqzHeyGT-xr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "21addd14-5c59-4a52-ef84-b405ad05b7a2"
+      },
+      "source": [
+        "x.ndim"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h-wcb0b_UrVl",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.2 Vectors (1D tensors)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EMp_uGGPVONk",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Vector* or 1D tensor is an array of numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YhSn4F82VM8Y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = np.array([12, 3, 6, 14, 7])"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
