--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZg5MfaHZxOJ2eRQL97Vlf",
+      "authorship_tag": "ABX9TyNuA0cXiC6z2VEO4RNcQK+5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,16 +43,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 71
         },
-        "outputId": "e20b15b6-1273-4fae-93df-daf769575fc0"
+        "outputId": "588b0e4d-8f57-424f-dcb7-8532476f878d"
       },
       "source": [
         "from keras.datasets import mnist\n",
         "(train_images, train_lables), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -82,12 +89,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ccbf94dd-41c9-4724-f52c-b714271308c7"
+        "outputId": "4109a8b9-0f50-441e-ec15-fa388aeaf6f0"
       },
       "source": [
         "train_images.shape\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +106,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -112,12 +119,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "e2a0235e-a41a-4222-ced1-65f3ec4b291a"
+        "outputId": "a6f0f07a-3aa5-4153-a5e2-957b435bce54"
       },
       "source": [
         "len(train_lables)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +136,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -142,12 +149,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "9f9943da-2774-43c7-b044-bac6175753e3"
+        "outputId": "f68c6f06-4f25-4421-b47e-cde087419703"
       },
       "source": [
         "train_lables"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -182,12 +189,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "be204472-0e45-4fbf-9af1-eb19df845e23"
+        "outputId": "0eff6229-c2eb-4162-a68f-bcb000e71154"
       },
       "source": [
         "test_images.shape"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +206,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -212,12 +219,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "e7166ba4-39d5-4d5e-c823-c586c85570d1"
+        "outputId": "641d6e51-c0b0-47cf-ffe7-6abd49acc647"
       },
       "source": [
         "len(test_labels)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +236,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -242,12 +249,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ff9f342d-e746-4786-db52-1704c40aaf6b"
+        "outputId": "2ddd562d-b870-4023-9993-bbb4d8e4e1a3"
       },
       "source": [
         "test_labels"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -284,7 +291,7 @@
         "from keras import models\n",
         "from keras import layers\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -299,7 +306,7 @@
         "net.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
         "net.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -338,7 +345,7 @@
         "            loss='categorical_crossentropy',\n",
         "            metrics=['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -365,7 +372,7 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype('float32') / 255"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -391,7 +398,7 @@
         "train_lables = to_categorical(train_lables)\n",
         "test_labels = to_categorical(test_labels)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -403,26 +410,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 235
         },
-        "outputId": "15bf4cf1-15b5-49e5-db92-720abcd4358f"
+        "outputId": "7629b7fc-ed7b-410f-e2af-30d9764583d5"
       },
       "source": [
         "net.fit(train_images, train_lables, epochs=5, batch_size=128)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "60000/60000 [==============================] - 5s 83us/step - loss: 1.4864 - accuracy: 0.6596\n",
+            "60000/60000 [==============================] - 5s 76us/step - loss: 0.2570 - accuracy: 0.9257\n",
             "Epoch 2/5\n",
-            "60000/60000 [==============================] - 5s 81us/step - loss: 0.5936 - accuracy: 0.8520\n",
+            "60000/60000 [==============================] - 4s 72us/step - loss: 0.1047 - accuracy: 0.9689\n",
             "Epoch 3/5\n",
-            "60000/60000 [==============================] - 5s 88us/step - loss: 0.4131 - accuracy: 0.8878\n",
+            "60000/60000 [==============================] - 4s 74us/step - loss: 0.0683 - accuracy: 0.9791\n",
             "Epoch 4/5\n",
-            "60000/60000 [==============================] - 5s 78us/step - loss: 0.3542 - accuracy: 0.9008\n",
+            "60000/60000 [==============================] - 4s 75us/step - loss: 0.0496 - accuracy: 0.9854\n",
             "Epoch 5/5\n",
-            "60000/60000 [==============================] - 5s 77us/step - loss: 0.3246 - accuracy: 0.9073\n"
+            "60000/60000 [==============================] - 4s 75us/step - loss: 0.0380 - accuracy: 0.9886\n"
           ],
           "name": "stdout"
         },
@@ -430,13 +437,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.callbacks.History at 0x7f08b6e8c2e8>"
+              "<keras.callbacks.callbacks.History at 0x7feefbc5a8d0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
@@ -459,17 +466,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "65db5a54-ac56-49dd-a1ae-fd3baf71ee56"
+        "outputId": "d9e1c5fe-4ac2-4329-eecd-0a9eafdf8309"
       },
       "source": [
         "test_loss, test_acc = net.evaluate(test_images, test_labels)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000/10000 [==============================] - 1s 57us/step\n"
+            "10000/10000 [==============================] - 0s 49us/step\n"
           ],
           "name": "stdout"
         }
@@ -484,17 +491,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ba536579-0ae2-47cc-b739-53e92ba529c3"
+        "outputId": "5277ddc3-6491-40d0-d147-a18eb04f5872"
       },
       "source": [
         "print(\"test_acc:\", test_acc)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "test_acc: 0.9136999845504761\n"
+            "test_acc: 0.9803000092506409\n"
           ],
           "name": "stdout"
         }
@@ -569,14 +576,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "89f66ad9-3d6a-48c2-e0e4-95c571e312fe"
+        "outputId": "2317af42-c7e9-4bc4-d6ca-8ae54171ad32"
       },
       "source": [
         "import numpy as np\n",
         "x = np.array(12)\n",
         "x"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,7 +595,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 17
         }
       ]
     },
@@ -601,12 +608,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "21addd14-5c59-4a52-ef84-b405ad05b7a2"
+        "outputId": "146c8781-8ac8-433f-b612-64b9c5268ece"
       },
       "source": [
         "x.ndim"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +625,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 18
         }
       ]
     },
@@ -643,6 +650,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qANUK_vxQFZu",
+        "colab_type": "text"
+      },
+      "source": [
+        "A 1D tensor has exactly one axis."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "YhSn4F82VM8Y",
@@ -652,8 +669,155 @@
       "source": [
         "x = np.array([12, 3, 6, 14, 7])"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g2eEGRxIQv5F",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "19191a67-2f86-46ca-f685-15cf4c337b38"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12,  3,  6, 14,  7])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kWRRQ3CCQz81",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "eb0410b2-9d95-40cb-956b-115b8923f035"
+      },
+      "source": [
+        "x.ndim"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-X-4R-XeRFgl",
+        "colab_type": "text"
+      },
+      "source": [
+        "A vector with five entries or elements is a *5-dimensional vector*.\n",
+        "*Dimensionality* can denote the number of entries or elements along a specific axis or the number of axis in a tensor. So a 5D tensor would be a *tensor of rank 5*.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pgjovIP6SDER",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.3 Matrices (2D tensors)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TyNqB71iSKeB",
+        "colab_type": "text"
+      },
+      "source": [
+        "An array of vectors is a *matrix*, or 2D tensor. A matrix has two axes referred to as *rows* and *columns*.\n",
+        "A visual interpretation of a matrix as a rectangular grid of numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "30GTlxolTcqn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = np.array( [[5, 78, 2, 34, 0],\n",
+        "             [6, 79, 3, 35, 1],\n",
+        "             [7, 80, 4, 36, 2]])"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U98au2vOUCQB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1845933b-99bc-4260-f0b9-0b96e93c8d1d"
+      },
+      "source": [
+        "x.ndim"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SAYLnLETUOwh",
+        "colab_type": "text"
+      },
+      "source": [
+        "The entries from the first axis are called the *rows*, and the elements from the second axis are called the *columns*. [5, 78, 2, 34, 0] is the first row of x and [5, 6, 7] is the first column."
+      ]
     }
   ]
 }
